dockerfie + delete ports
dockerfie + delete ports
