# docs/swagger.json
@@ -38,6 +38,12 @@
                             "$ref": "#/definitions/ginx.SuccessResponse-internal_infra_http_controllers_users_UsersGetByResponse"
                         }
                     },
+                    "400": {
+                        "description": "Неверный email",
+                        "schema": {
+                            "$ref": "#/definitions/ginx.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Пользователя не существует",
                         "schema": {
@@ -84,8 +90,14 @@
                             "$ref": "#/definitions/ginx.ErrorResponse"
                         }
                     },
-                    "422": {
+                    "409": {
                         "description": "Пользователь уже существует",
+                        "schema": {
+                            "$ref": "#/definitions/ginx.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/ginx.ErrorResponse"
                         }
@@ -120,6 +132,12 @@
                         "description": "Успешный ответ",
                         "schema": {
                             "$ref": "#/definitions/ginx.SuccessResponse-internal_infra_http_controllers_users_UsersGetByResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный username",
+                        "schema": {
+                            "$ref": "#/definitions/ginx.ErrorResponse"
                         }
                     },
                     "404": {
@@ -254,7 +272,7 @@
                         }
                     },
                     "500": {
-                        "description": "Ошибка загрузки файла",
+                        "description": "Ошибка загрузки или открытия файла",
                         "schema": {
                             "$ref": "#/definitions/ginx.ErrorResponse"
                         }
@@ -485,12 +503,6 @@
                     },
                     "404": {
                         "description": "Пользователь не найден",
-                        "schema": {
-                            "$ref": "#/definitions/ginx.ErrorResponse"
-                        }
-                    },
-                    "422": {
-                        "description": "Ошибка бизнес-логики",
                         "schema": {
                             "$ref": "#/definitions/ginx.ErrorResponse"
                         }
